feat: update academic service
